fix dark mode issues

--- a/src/app/about/partners/styles.css
+++ b/src/app/about/partners/styles.css
@@ -69,6 +69,8 @@ h1 {
             width: 200px;
             height: 100px;
             object-fit: contain;
+            background-color: white;
+            padding: 12px;
         }
     }
 }
