--- a/src/components/Partners/styles.css
+++ b/src/components/Partners/styles.css
@@ -61,6 +61,8 @@
     height: 100%;
     padding: 0 1rem;
     transition: transform 200ms ease-out;
+    background-color: white;
+    border-radius: var(--border-radius);
 
     .logo-img {
         filter: grayscale(0%);
